fixed bug with gap

--- a/styles/EquipmentPage.module.css
+++ b/styles/EquipmentPage.module.css
@@ -31,7 +31,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 3rem;
+  gap: 6rem;
   padding: 1rem;
   margin: 0.5rem;
 }
